CICO-37984 partial changes

--- a/zest_station/partials_v2/checkin/zscheckinKeyDispense.html
+++ b/zest_station/partials_v2/checkin/zscheckinKeyDispense.html
@@ -197,30 +197,7 @@
     </div>
     <span ng-include="'/assets/partials_v2/zsTabletFooter.html'"></span>
 </section>
-<!--------------------- mobile key or physical key start screen ------------------------>
-<section id="main" class="centered" role="main" click-touch='resetTime()' ng-show="mode === 'MOBILE_OR_PHYSICAL_KEY_START'">
-    <div id="content">
-        <h2 class="no-margin">
-            <text editable-text="CHKED_IN_SUCCESS_HEADER"> {{'CHKED_IN_SUCCESS_HEADER' |translate}}</text> {{first_name}}.
-        </h2>
-        <h1 ng-show="!zestStationData.show_room_number">
-            <text editable-text="CHKED_IN_SUCCESS_MSG"> {{'CHKED_IN_SUCCESS_MSG' |translate}}</text>
-        </h1>
-        <h1 ng-show="zestStationData.show_room_number">
-            <text editable-text="CHKED_IN_SUCCESS_MSG_WITH_ROOM"> {{'CHKED_IN_SUCCESS_MSG_WITH_ROOM' |translate}}</text>
-        </h1>
-        <div id="room" ng-show="zestStationData.show_room_number">
-            <span class="number">{{room}}</span>
-        </div>
-        <!-- TODO: grey next button if no option selected -->
-    </div>
-    <div id="actions" class="add-guests-footer footer-centered">
-        <button type="button" class="button" click-touch="goToNextScreen('success')">
-            <text editable-text="NEXT"> {{'NEXT' |translate}}</text>
-        </button>
-    </div>
-    <span ng-include="'/assets/partials_v2/zsTabletFooter.html'"></span>
-</section>
+<!-- select mobile key/ physical key -->
 <section id="main" class="centered" role="main" click-touch='resetTime()' ng-show="mode === 'MOBILE_OR_PHYSICAL_KEY'">
     <div id="content">
         <h1>
@@ -264,9 +241,141 @@
         </nav>
     </div>
     <div id="actions" class="add-guests-footer footer-centered mobile-key-next">
-        <button type="button" ng-disabled="!physicalKeySelected && !mobileKeySelected" ng-class="{'disabled-button':!physicalKeySelected && !mobileKeySelected}" class="button" click-touch="goToNextScreen('success')">
+        <button type="button" ng-disabled="!physicalKeySelected && !mobileKeySelected" ng-class="{'disabled-button':!physicalKeySelected && !mobileKeySelected}" class="button" click-touch="keyTypeselected()">
             <text editable-text="NEXT"> {{'NEXT' |translate}}</text>
         </button>
+    </div>
+    <span ng-include="'/assets/partials_v2/zsTabletFooter.html'"></span>
+</section>
+
+<!-- THIRD PARTY SELECTION-->
+<section id="main" class="centered" role="main" click-touch='resetTime()' ng-show="mode === 'THIRD_PARTY_SELECTION'">
+    <div id="content">
+        <h1>
+            <text editable-text="THIRD_PARTY_MOBILE_SELECT_HEADER"> {{'THIRD_PARTY_MOBILE_SELECT_HEADER' |translate}}</text>
+        </h1>
+        <h2>
+            <text editable-text="THIRD_PARTY_MOBILE_SELECT_SUB_HEADER"> {{'THIRD_PARTY_MOBILE_SELECT_SUB_HEADER' |translate}}</text>
+        </h2>
+        <nav id="options" role="nav">
+            <ul role="menu">
+                <li>
+                    <button type="button" class="button option" touch-press='thirdPartyHaveIt()'>
+                        <div ng-include="icons.url.key"></div>
+                    </button>
+                    <h1>
+                        <text editable-text="THIRD_PARTY_HAVE_IT"> {{'THIRD_PARTY_HAVE_IT' |translate}}</text>
+                    </h1>
+                    <span class='select-sub-text'>
+                        <text editable-text="THIRD_PARTY_HAVE_IT_SUB"> {{'THIRD_PARTY_HAVE_IT_SUB' |translate}}</text>
+                    </span>
+                </li>
+                <li class="break">
+                    <span>
+                        <text editable-text="OR_TEXT"> {{'OR_TEXT' |translate}}</text>
+                    </span>
+                </li>
+                <li>
+                    <button type="button" class="button option" touch-press='thirdPartyGetIt()'>
+                        <div ng-include="icons.url.staff"></div>
+                    </button>
+                    <h1>
+                        <text editable-text="THIRD_PARTY_GET_IT"> {{'THIRD_PARTY_GET_IT' |translate}}</text>
+                    </h1>
+                    <span class='select-sub-text'>
+                        <text editable-text="THIRD_PARTY_GET_IT_SUB"> {{'THIRD_PARTY_GET_IT_SUB' |translate}}</text>
+                    </span>
+                </li>
+                <li class="break">
+                    <span>
+                        <text editable-text="OR_TEXT"> {{'OR_TEXT' |translate}}</text>
+                    </span>
+                </li>
+                <li>
+                    <button type="button" class="button option" touch-press='thirdPartyNoThanks()'>
+                        <div ng-include="icons.url.checkin"></div>
+                    </button>
+                    <h1>
+                        <text editable-text="THIRD_PARTY_NO_THX"> {{'THIRD_PARTY_NO_THX' |translate}}</text>
+                    </h1>
+                    <span class='select-sub-text'>
+                        <text editable-text="THIRD_PARTY_NO_THX_SUB"> {{'THIRD_PARTY_NO_THX_SUB' |translate}}</text>
+                    </span>
+                </li>
+            </ul>
+        </nav>
+        </nav>
+    </div>
+    <span ng-include="'/assets/partials_v2/zsTabletFooter.html'"></span>
+</section>
+<!--------------------- mobile key :: Sent to user account :: ------------------------>
+<section id="main" class="centered" role="main" click-touch='resetTime()' ng-show="mode === 'THIRD_PARTY_HAVE_IT_INFO'">
+    <div id="content">
+        <h1>
+            <text editable-text="THIRD_PARTY_MOBILE_HAVE_IT_INFO_HEADER"> {{'THIRD_PARTY_MOBILE_HAVE_IT_INFO_HEADER' |translate}}</text>
+        </h1>
+        <h2>
+            <text editable-text="THIRD_PARTY_MOBILE_HAVE_IT_INFO_SUB_HEADER"> {{'THIRD_PARTY_MOBILE_HAVE_IT_INFO_SUB_HEADER' |translate}}</text>
+        </h2>
+        <nav id="options" role="nav">
+            <h1 class='key-text-style'>
+                <text editable-text="THIRD_PARTY_MOBILE_HAVE_IT_INFO_BODY_LARGE_TEXT"> {{'THIRD_PARTY_MOBILE_HAVE_IT_INFO_BODY_LARGE_TEXT' |translate}}</text>
+            </h1>
+            <ul>
+                <h2>
+                    <text editable-text="THIRD_PARTY_MOBILE_HAVE_IT_INFO_BODY_TEXT"> {{'THIRD_PARTY_MOBILE_HAVE_IT_INFO_BODY_TEXT' |translate}}</text>
+                </h2>
+            </ul>
+        </nav>
+    </div>
+    <div id="actions" class="add-guests-footer footer-centered mobile-key-next">
+        <button type="button" ng-class='' class="button" click-touch="goToNextScreen('success')">
+            <text editable-text="NEXT"> {{'NEXT' |translate}}</text>
+        </button>
+    </div>
+    <span ng-include="'/assets/partials_v2/zsTabletFooter.html'"></span>
+</section>
+
+
+<!--------------------- mobile key :: Sent to user account :: ------------------------>
+<section id="main" class="centered" role="main" click-touch='resetTime()' ng-show="mode === 'THIRD_PARTY_GET_IT_INFO'">
+    <div id="content">
+        <h1>
+            <text editable-text="THIRD_PARTY_MOBILE_GET_IT_INFO_HEADER"> {{'THIRD_PARTY_MOBILE_GET_IT_INFO_HEADER' |translate}}</text>
+        </h1>
+        <h2>
+            <text editable-text="THIRD_PARTY_MOBILE_GET_IT_INFO_SUB_HEADER"> {{'THIRD_PARTY_MOBILE_GET_IT_INFO_SUB_HEADER' |translate}}</text>
+            <span ng-show='downloadAppShowEmail'>{{email}}</span>
+            <text editable-text="THIRD_PARTY_MOBILE_GET_IT_INFO_SUB_HEADER_AFTER"> {{'THIRD_PARTY_MOBILE_GET_IT_INFO_SUB_HEADER_AFTER' |translate}}</text>
+        </h2>
+
+         <nav id="options" role="nav">
+            <ul role="menu">
+                <li>
+                    <button type="button" class="button option" touch-press='sendMobileKeyEmail()'>
+                        <div ng-include="icons.url.email"></div>
+                    </button>
+                    <span>
+                        <text editable-text="SEND_EMAIL"> {{'SEND_EMAIL' |translate}}</text>
+                    </span>
+                </li>
+                <li class="break">
+                    <span>
+                        <text editable-text="OR_TEXT"> {{'OR_TEXT' |translate}}</text>
+                    </span>
+                </li>
+                <li>
+                    <button type="button" class="button option" touch-press='editEmailAddress()'>
+                        <div ng-include="icons.url.pen"></div>
+                    </button>
+                    <span>
+                        <text editable-text="EDIT_EMAIL"> {{'EDIT_EMAIL' |translate}}</text>
+                    </span>
+                </li>
+            </ul>
+        </nav>
+
+
     </div>
     <span ng-include="'/assets/partials_v2/zsTabletFooter.html'"></span>
 </section>
@@ -419,139 +528,6 @@
                 </li>
             </ul>
         </nav>
-    </div>
-    <span ng-include="'/assets/partials_v2/zsTabletFooter.html'"></span>
-</section>
-
-<!-- THIRD PARTY SELECTION-->
-<section id="main" class="centered" role="main" click-touch='resetTime()' ng-show="mode === 'THIRD_PARTY_SELECTION'">
-    <div id="content">
-        <h1>
-            <text editable-text="THIRD_PARTY_MOBILE_SELECT_HEADER"> {{'THIRD_PARTY_MOBILE_SELECT_HEADER' |translate}}</text>
-        </h1>
-        <h2>
-            <text editable-text="THIRD_PARTY_MOBILE_SELECT_SUB_HEADER"> {{'THIRD_PARTY_MOBILE_SELECT_SUB_HEADER' |translate}}</text>
-        </h2>
-        <nav id="options" role="nav">
-            <ul role="menu">
-                <li>
-                    <button type="button" class="button option" touch-press='thirdPartyHaveIt()'>
-                        <div ng-include="icons.url.key"></div>
-                    </button>
-                    <h1>
-                        <text editable-text="THIRD_PARTY_HAVE_IT"> {{'THIRD_PARTY_HAVE_IT' |translate}}</text>
-                    </h1>
-                    <span class='select-sub-text'>
-                        <text editable-text="THIRD_PARTY_HAVE_IT_SUB"> {{'THIRD_PARTY_HAVE_IT_SUB' |translate}}</text>
-                    </span>
-                </li>
-                <li class="break">
-                    <span>
-                        <text editable-text="OR_TEXT"> {{'OR_TEXT' |translate}}</text>
-                    </span>
-                </li>
-                <li>
-                    <button type="button" class="button option" touch-press='thirdPartyGetIt()'>
-                        <div ng-include="icons.url.staff"></div>
-                    </button>
-                    <h1>
-                        <text editable-text="THIRD_PARTY_GET_IT"> {{'THIRD_PARTY_GET_IT' |translate}}</text>
-                    </h1>
-                    <span class='select-sub-text'>
-                        <text editable-text="THIRD_PARTY_GET_IT_SUB"> {{'THIRD_PARTY_GET_IT_SUB' |translate}}</text>
-                    </span>
-                </li>
-                <li class="break">
-                    <span>
-                        <text editable-text="OR_TEXT"> {{'OR_TEXT' |translate}}</text>
-                    </span>
-                </li>
-                <li>
-                    <button type="button" class="button option" touch-press='thirdPartyNoThanks()'>
-                        <div ng-include="icons.url.checkin"></div>
-                    </button>
-                    <h1>
-                        <text editable-text="THIRD_PARTY_NO_THX"> {{'THIRD_PARTY_NO_THX' |translate}}</text>
-                    </h1>
-                    <span class='select-sub-text'>
-                        <text editable-text="THIRD_PARTY_NO_THX_SUB"> {{'THIRD_PARTY_NO_THX_SUB' |translate}}</text>
-                    </span>
-                </li>
-            </ul>
-        </nav>
-        </nav>
-    </div>
-    <span ng-include="'/assets/partials_v2/zsTabletFooter.html'"></span>
-</section>
-
-<!--------------------- mobile key :: Sent to user account :: ------------------------>
-<section id="main" class="centered" role="main" click-touch='resetTime()' ng-show="mode === 'THIRD_PARTY_HAVE_IT_INFO'">
-    <div id="content">
-        <h1>
-            <text editable-text="THIRD_PARTY_MOBILE_HAVE_IT_INFO_HEADER"> {{'THIRD_PARTY_MOBILE_HAVE_IT_INFO_HEADER' |translate}}</text>
-        </h1>
-        <h2>
-            <text editable-text="THIRD_PARTY_MOBILE_HAVE_IT_INFO_SUB_HEADER"> {{'THIRD_PARTY_MOBILE_HAVE_IT_INFO_SUB_HEADER' |translate}}</text>
-        </h2>
-        <nav id="options" role="nav">
-            <h1 class='key-text-style'>
-                <text editable-text="THIRD_PARTY_MOBILE_HAVE_IT_INFO_BODY_LARGE_TEXT"> {{'THIRD_PARTY_MOBILE_HAVE_IT_INFO_BODY_LARGE_TEXT' |translate}}</text>
-            </h1>
-            <ul>
-                <h2>
-                    <text editable-text="THIRD_PARTY_MOBILE_HAVE_IT_INFO_BODY_TEXT"> {{'THIRD_PARTY_MOBILE_HAVE_IT_INFO_BODY_TEXT' |translate}}</text>
-                </h2>
-            </ul>
-        </nav>
-    </div>
-    <div id="actions" class="add-guests-footer footer-centered mobile-key-next">
-        <button type="button" ng-class='' class="button" click-touch="goToNextScreen('success')">
-            <text editable-text="NEXT"> {{'NEXT' |translate}}</text>
-        </button>
-    </div>
-    <span ng-include="'/assets/partials_v2/zsTabletFooter.html'"></span>
-</section>
-
-
-<!--------------------- mobile key :: Sent to user account :: ------------------------>
-<section id="main" class="centered" role="main" click-touch='resetTime()' ng-show="mode === 'THIRD_PARTY_GET_IT_INFO'">
-    <div id="content">
-        <h1>
-            <text editable-text="THIRD_PARTY_MOBILE_GET_IT_INFO_HEADER"> {{'THIRD_PARTY_MOBILE_GET_IT_INFO_HEADER' |translate}}</text>
-        </h1>
-        <h2>
-            <text editable-text="THIRD_PARTY_MOBILE_GET_IT_INFO_SUB_HEADER"> {{'THIRD_PARTY_MOBILE_GET_IT_INFO_SUB_HEADER' |translate}}</text>
-            <span ng-show='downloadAppShowEmail'>{{email}}</span>
-            <text editable-text="THIRD_PARTY_MOBILE_GET_IT_INFO_SUB_HEADER_AFTER"> {{'THIRD_PARTY_MOBILE_GET_IT_INFO_SUB_HEADER_AFTER' |translate}}</text>
-        </h2>
-
-         <nav id="options" role="nav">
-            <ul role="menu">
-                <li>
-                    <button type="button" class="button option" touch-press='editEmailAddress()'>
-                        <div ng-include="icons.url.pen"></div>
-                    </button>
-                    <span>
-                        <text editable-text="EDIT_EMAIL"> {{'EDIT_EMAIL' |translate}}</text>
-                    </span>
-                </li>
-                <li class="break">
-                    <span>
-                        <text editable-text="OR_TEXT"> {{'OR_TEXT' |translate}}</text>
-                    </span>
-                </li>
-                <li>
-                    <button type="button" class="button option" touch-press='sendEmail()'>
-                        <div ng-include="icons.url.email"></div>
-                    </button>
-                    <span>
-                        <text editable-text="SEND_EMAIL"> {{'SEND_EMAIL' |translate}}</text>
-                    </span>
-                </li>
-            </ul>
-        </nav>
-
-
     </div>
     <span ng-include="'/assets/partials_v2/zsTabletFooter.html'"></span>
 </section>
