CICO-37984 email collection

--- a/zest_station/partials_v2/checkin/zscheckinKeyDispense.html
+++ b/zest_station/partials_v2/checkin/zscheckinKeyDispense.html
@@ -210,11 +210,14 @@
 <section id="main" class="centered" role="main" click-touch='resetTime()' ng-show="mode === 'THIRD_PARTY_HAVE_IT_INFO'">
    <span ng-include="'/assets/partials_v2/checkin/key_screen/zsCheckinThirdPartyAppPresent.html'"></span>
 </section>
-<!--------------------- mobile key :: Sent to user account :: ------------------------>
+<!--------------------- Doesn't have mobile app ------------------------>
 <section id="main" class="centered" role="main" click-touch='resetTime()' ng-show="mode === 'THIRD_PARTY_GET_IT_INFO'">
    <span ng-include="'/assets/partials_v2/checkin/key_screen/zsCheckinGetMobileApp.html'"></span>
 </section>
-
+<!--------------------- collect email ------------------------>
+<section id="main" class="centered" role="main" click-touch='resetTime()' ng-show="mode === 'COLLECT_EMAIL'" ng-controller="zsCheckinMobileKeyEmailCollectionCtrl">
+   <span ng-include="'/assets/partials_v2/checkin/key_screen/zsCheckinKeyEmailCollection.html'"></span>
+</section>
 
 <!--------------------- mobile key :: Sent to user account :: ------------------------>
 <section id="main" class="centered" role="main" click-touch='resetTime()' ng-show="mode === 'MOBILE_KEY_SENT_SUCCESS'">
