CICO-37984 minor change

--- a/zest_station/partials_v2/checkin/key_screen/zsCheckinGetMobileApp.html
+++ b/zest_station/partials_v2/checkin/key_screen/zsCheckinGetMobileApp.html
@@ -4,7 +4,7 @@
    </h1>
    <h2>
       <text editable-text="THIRD_PARTY_MOBILE_GET_IT_INFO_SUB_HEADER"> {{'THIRD_PARTY_MOBILE_GET_IT_INFO_SUB_HEADER' |translate}}</text>
-      <span>{{guestDetails.guestEmail}}</span>
+      <span>{{guestDetails.guestEmail}}.</span>
       <text editable-text="THIRD_PARTY_MOBILE_GET_IT_INFO_SUB_HEADER_AFTER"> {{'THIRD_PARTY_MOBILE_GET_IT_INFO_SUB_HEADER_AFTER' |translate}}</text>
    </h2>
    <nav id="options" role="nav">
