email collection directive implementation

--- a/zest_station/directives/zsEmailCollection/zsEmailCollectionDir.html
+++ b/zest_station/directives/zsEmailCollection/zsEmailCollectionDir.html
@@ -31,7 +31,7 @@
                 <li>
                     <button type="button" class="button option" touch-press="reEnterText()">
                     <!--div ng-include="'/assets/zest_station/css/icons/keyboard.svg'"></div-->
-                    <div ng-include="icons.url.keyboard"></div>
+                    <div ng-include="icon"></div>
                     </button>
                     <text editable-text="RE_TYPE"> {{'RE_TYPE' |translate}}</text>
                     <span>"{{email}}"</span>
