--- a/zest_station/partials_v2/checkin/zsCheckinEmailCollection.html
+++ b/zest_station/partials_v2/checkin/zsCheckinEmailCollection.html
@@ -1,4 +1,4 @@
 <!-- email entry mode -->
 <section id="main" role="main" class="centered">
-    <zs-email-collection mode="mode" guest-id="1222" icon="icons.url.keyboard" email="email" is-skipable="true">
+    <zs-email-collection mode="mode" guest-id="guestId" icon="icons.url.keyboard" email="email" is-skipable="true">
 </section>
