email directive implementation in mobile key page

--- a/zest_station/partials_v2/checkin/zscheckinKeyDispense.html
+++ b/zest_station/partials_v2/checkin/zscheckinKeyDispense.html
@@ -215,7 +215,7 @@
    <span ng-include="'/assets/partials_v2/checkin/key_screen/zsCheckinGetMobileApp.html'"></span>
 </section>
 <!--------------------- collect email ------------------------>
-<section id="main" class="centered" role="main" click-touch='resetTime()' ng-show="mode === 'COLLECT_EMAIL'" ng-controller="zsCheckinMobileKeyEmailCollectionCtrl">
+<section id="main" class="centered" role="main" click-touch='resetTime()' ng-show="mode === 'COLLECT_EMAIL'">
    <span ng-include="'/assets/partials_v2/checkin/key_screen/zsCheckinKeyEmailCollection.html'"></span>
 </section>
 <!--------------------- mobile key :: Sent to user account :: ------------------------>
