virtual keyboard integration

--- a/zest_station/partials_v2/checkin/key_screen/zsCheckinKeyEmailCollection.html
+++ b/zest_station/partials_v2/checkin/key_screen/zsCheckinKeyEmailCollection.html
@@ -1,1 +1,1 @@
- <zs-email-collection mode="emailMode" guest-id="guestId" icon="icons.url.keyboard" email="guestDetails.guestEmail" is-skipable="false"></zs-email-collection>
+ <zs-email-collection mode="emailMode" guest-id="guestId" icon="icons.url.keyboard" email="guestDetails.guestEmail" is-skipable="false" show-keyboard="showOnScreenKeyboard('email-entry')"></zs-email-collection>
