--- a/zest_station/directives/zsEmailCollection/zsEmailCollectionDir.html
+++ b/zest_station/directives/zsEmailCollection/zsEmailCollectionDir.html
@@ -9,7 +9,7 @@
         </h3>
         <form method="post" class="form">
             <div class="entry input">
-                <input id="email-entry" type="text" ng-focus="showOnScreenKeyboard('email-entry')" click-touch="showOnScreenKeyboard('email-entry')" class="start-focused" ng-keydown="resetTime()" ng-model='email' enter-press="goToNext()" value="" touch-press />
+                <input id="email-entry" type="text" ng-focus="showKeyboard('email-entry')" click-touch="showKeyboard('email-entry')" class="start-focused" ng-keydown="resetTime()" ng-model='email' enter-press="goToNext()" value="" touch-press />
             </div>
             <div class="entry action">
                 <button type="button" class="button" touch-press='goToNext()' ng-class="{'overlay': email.length < 1}">
