country-selector-fix zest station

--- a/zest_station/partials_v2/checkin/zsCollectNationality.html
+++ b/zest_station/partials_v2/checkin/zsCollectNationality.html
@@ -6,7 +6,7 @@
         <!-- <h3>Subheading text here</h3> -->
         <form method="post" class="form">
 
-            <div class="entry input select-with-button " ng-class="{'autocomplete-border':showingAutoCompleteArea == true}">
+            <div class="entry input select-with-button " ng-class="{'autocomplete-border':showingAutoCompleteArea == true}" id='country-select-div'>
                 <!--input type='text' id='country-selector'-->
 
                 <select
