--- a/zest_station/partials_v2/checkin/zsCheckinRegCardDeliveryOptions.html
+++ b/zest_station/partials_v2/checkin/zsCheckinRegCardDeliveryOptions.html
@@ -71,7 +71,7 @@
 </section>
 <!-- email entry mode -->
 <section id="main" role="main" class="centered" ng-show=" mode === 'EMAIL_ENTRY_MODE' || mode === 'EMAIL_INVLAID_MODE'">
-     <zs-email-collection mode="mode" guest-id="guestId" icon="icons.url.keyboard" email="email" is-skipable="false"></zs-email-collection>
+     <zs-email-collection mode="mode" guest-id="guestId" icon="icons.url.keyboard" email="email" is-skipable="false" on-focus="focusInputField(elementId)" on-blur="callBlurEventForIpad()"></zs-email-collection>
 </section>
 
 <!-- print  -->
