CICO-39880 minor change

--- a/zest_station/partials_v2/checkout/zsEmailBill.html
+++ b/zest_station/partials_v2/checkout/zsEmailBill.html
@@ -29,7 +29,7 @@
                     <button type="button" class="button option" touch-press='checkOutGuest()'>
                         <div ng-include="icons.url.email"></div>
                     </button>
-                    <text editable-text="CONTINUE"> {{'SEND_EMAIL' |translate}}</text>
+                    <text editable-text="SEND_EMAIL"> {{'SEND_EMAIL' |translate}}</text>
                 </li>
             </ul>
         </nav>
