country-selector-fix cleanup and add refresh button in admin for chrome/electron/ipad

--- a/zest_station/partials_v2/zsAdminSettings.html
+++ b/zest_station/partials_v2/zsAdminSettings.html
@@ -210,6 +210,7 @@
             <button type="button" class="button button-left-margin" touch-press='logOutApplication()'>Logout</button>
 
             <button ng-show="showDebugModeOption" type="button" class="button button-left-margin" touch-press='toggleDiagnostics()'>Diagnostics</button>
+            <button ng-show="showDebugModeOption" type="button" class="button button-left-margin" click-touch='reload()'>Refresh</button>
 
         </div>
     </div>
