CICO-39752 minor fix

--- a/zest_station/partials_v2/checkin/key_screen/zsCheckinKeyKeyTypeMode.html
+++ b/zest_station/partials_v2/checkin/key_screen/zsCheckinKeyKeyTypeMode.html
@@ -19,11 +19,7 @@
                         <text editable-text="SELECT_MOBILE_KEY_SUB"> {{'SELECT_MOBILE_KEY_SUB' |translate}}</text>
                     </span>
                 </li>
-                <li class="break">
-                    <span>
-                        <text editable-text="OR_TEXT"> {{'OR_TEXT' |translate}}</text>
-                    </span>
-                </li>
+                <li class="break single-line"></li>
                 <li>
                     <button type="button" class="button option" touch-press='selectPhysicalKey()'>
                         <div ng-show="!physicalKeySelected" ng-include="icons.url.creditcard"></div>
