CICO-39515 Datalogic via Handler completes UI functionality

--- a/zest_station/partials_v2/zsDiagnostics.html
+++ b/zest_station/partials_v2/zsDiagnostics.html
@@ -38,7 +38,7 @@
     </span>
 
      <span>Encoding Keys - <span ng-class='{"key-in-progress":zestStationData.makingKeyInProgress}'>({{zestStationData.makingKeyInProgress}})</span><br> </span>
-     
+     <span>Scanning For QR Code - <span ng-class='{"key-in-progress":zestStationData.qrCodeScanning}'>({{zestStationData.qrCodeScanning}})</span><br> </span> 
      <span ng-show='inChromeApp'>
         Zest Station Handler - <span ng-class='{"key-in-progress":zestStationData.stationHandlerConnectedStatus == "Not-Connected"}'>({{zestStationData.stationHandlerConnectedStatus}})</span><br> 
     </span>
